cabal-version: 3.0

name:                   trace-dispatcher
version:                2.5.5
synopsis:               Tracers for Cardano
description:            Package for development of simple and efficient tracers
                        based on the arrow based contra-tracer package
category:               Cardano,
                        Trace,
copyright:              2020-2023 Input Output Global Inc (IOG), 2023-2024 Intersect.
author:                 Juergen Nicklisch-Franken
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
extra-doc-files:        CHANGELOG.md
                        README.md
                        doc/trace-dispatcher.md

common project-config
  default-language:     Haskell2010

library
  import:             project-config
  hs-source-dirs:     src
  exposed-modules:    Cardano.Logging
                      Cardano.Logging.Configuration
                      Cardano.Logging.ConfigurationParser
                      Cardano.Logging.Consistency
                      Cardano.Logging.DocuGenerator
                      Cardano.Logging.Formatter
                      Cardano.Logging.Forwarding
                      Cardano.Logging.FrequencyLimiter
                      Cardano.Logging.Trace
                      Cardano.Logging.TraceDispatcherMessage
                      Cardano.Logging.Tracer.DataPoint
                      Cardano.Logging.Tracer.EKG
                      Cardano.Logging.Tracer.Standard
                      Cardano.Logging.Tracer.Forward
                      Cardano.Logging.Tracer.Composed
                      Cardano.Logging.Types
                      Cardano.Logging.Utils
                      Cardano.Logging.Version
                      Control.Tracer.Arrow
                      Control.Tracer

  default-extensions:   OverloadedStrings
  build-depends:        base >=4.12 && <5
                      , aeson >= 2.1.0.0
                      , aeson-pretty
                      , async
                      , bytestring
                      , cborg
                      , containers
                      , contra-tracer
                      , deepseq
                      , ekg
                      , ekg-core
                      , ekg-forward >= 0.5
                      , hostname
                      , network
                      , optparse-applicative-fork
                      , ouroboros-network ^>= 0.14
                      , ouroboros-network-api
                      , ouroboros-network-framework
                      , serialise
                      , stm
                      , text
                      , time
                      , trace-forward
                      , unagi-chan >= 0.4.1.4
                      , unliftio
                      , unliftio-core
                      , unordered-containers
                      , yaml

  if os(windows)
     build-depends:     Win32
  else
     build-depends:     unix

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Widentities
                        -Wredundant-constraints
                        -Wmissing-export-lists


test-suite trace-dispatcher-test
  import:               project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              trace-dispatcher-test.hs
  other-modules:        Cardano.Logging.Test.Types
                        Cardano.Logging.Test.Oracles
                        Cardano.Logging.Test.Config
                        Cardano.Logging.Test.Tracer
                        Cardano.Logging.Test.Script
                        Cardano.Logging.Test.Unit.TestObjects
                        Cardano.Logging.Test.Unit.Aggregation
                        Cardano.Logging.Test.Unit.Trivial
                        Cardano.Logging.Test.Unit.Routing
                        Cardano.Logging.Test.Unit.EKG
                        Cardano.Logging.Test.Unit.Configuration
                        Cardano.Logging.Test.Unit.DataPoint
                        Cardano.Logging.Test.Unit.FrequencyLimiting
                        Cardano.Logging.Test.Unit.Documentation

  default-extensions:   OverloadedStrings
  build-depends:        base >=4.12 && <5
                      , aeson
                      , bytestring
                      , cardano-prelude
                      , containers
                      , deepseq
                      , ekg
                      , ekg-core
                      , generic-data
                      , hostname
                      , optparse-applicative
                      , ouroboros-network
                      , text
                      , stm
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , time
                      , trace-dispatcher
                      , trace-forward
                      , unagi-chan
                      , unliftio
                      , unliftio-core
                      , unordered-containers
                      , utf8-string
                      , yaml
                      , QuickCheck


  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Widentities
                        -Wredundant-constraints
                        -Wmissing-export-lists
                        -Wno-incomplete-patterns

benchmark trace-dispatcher-bench
  import:               project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench, test
  main-is:              trace-dispatcher-bench.hs
  default-extensions:   OverloadedStrings
  other-modules:        Cardano.Logging.Test.Types
                        Cardano.Logging.Test.Oracles
                        Cardano.Logging.Test.Config
                        Cardano.Logging.Test.Tracer
                        Cardano.Logging.Test.Script
  build-depends:        base >=4.12 && <5
                      , aeson
                      , containers
                      , criterion
                      , ekg
                      , text
                      , time
                      , trace-dispatcher
                      , QuickCheck
