cabal-version: 3.0

name:                   trace-dispatcher
version:                2.10.0
synopsis:               Tracers for Cardano
description:            Package for development of simple and efficient tracers
                        based on the arrow based contra-tracer package
category:               Cardano,
                        Trace,
copyright:              2020-2023 Input Output Global Inc (IOG), 2023-2025 Intersect.
author:                 Juergen Nicklisch-Franken
maintainer:             operations@iohk.io
license:                Apache-2.0
license-files:          LICENSE
                        NOTICE
extra-doc-files:        CHANGELOG.md
                        README.md
                        doc/trace-dispatcher.md

common project-config
  default-language:     Haskell2010

  default-extensions:   LambdaCase
                        NamedFieldPuns
                        OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -Wpartial-fields
                        -Widentities
                        -Wredundant-constraints
                        -Wmissing-export-lists
                        -Wno-incomplete-patterns

  if impl(ghc >= 9.8)
    ghc-options:        -Wno-x-partial


library
  import:             project-config
  hs-source-dirs:     src
  exposed-modules:    Cardano.Logging
                      Cardano.Logging.Configuration
                      Cardano.Logging.ConfigurationParser
                      Cardano.Logging.Consistency
                      Cardano.Logging.DocuGenerator
                      Cardano.Logging.DocuGenerator.Result
                      Cardano.Logging.DocuGenerator.Tree
                      Cardano.Logging.Formatter
                      Cardano.Logging.FrequencyLimiter
                      Cardano.Logging.Prometheus.Exposition
                      Cardano.Logging.Prometheus.NetworkRun
                      Cardano.Logging.Prometheus.TCPServer
                      Cardano.Logging.Trace
                      Cardano.Logging.TraceDispatcherMessage
                      Cardano.Logging.Tracer.DataPoint
                      Cardano.Logging.Tracer.EKG
                      Cardano.Logging.Tracer.Standard
                      Cardano.Logging.Tracer.Forward
                      Cardano.Logging.Tracer.Composed
                      Cardano.Logging.Types
                      Cardano.Logging.Types.NodeInfo
                      Cardano.Logging.Types.NodePeers
                      Cardano.Logging.Types.NodeStartupInfo
                      Cardano.Logging.Utils
                      Control.Tracer.Arrow
                      Control.Tracer

  build-depends:        base >=4.12 && <5
                      , aeson >= 2.1.0.0
                      , aeson-pretty
                      , async
                      , bytestring
                      , containers
                      , contra-tracer
                      , deepseq
                      , ekg-core
                      , hashable
                      , hostname
                      , http-date
                      , network
                      , serialise
                      , stm
                      , text
                      , time
                      , time-manager
                      , unagi-chan >= 0.4.1.4
                      , unix-compat
                      , unliftio
                      , unliftio-core
                      , unordered-containers
                      , yaml

  if os(windows)
     build-depends:     Win32
  else
     build-depends:     unix

test-suite trace-dispatcher-prometheus-simple-test
  import:               project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              trace-dispatcher-prometheus-simple-test.hs
  build-depends:        base >=4.12 && <5
                      , aeson
                      , async
                      , cardano-prometheus-tracker
                      , containers
                      , ekg-core
                      , http-client
                      , text
                      , trace-dispatcher
                      , unix

  ghc-options:
    -threaded
    -Wunused-packages

  if !(os(linux) || os(darwin) || os(freebsd))
    buildable: False

test-suite trace-dispatcher-test
  import:               project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              trace-dispatcher-test.hs
  other-modules:        Cardano.Logging.Test.Types
                        Cardano.Logging.Test.Oracles
                        Cardano.Logging.Test.Config
                        Cardano.Logging.Test.Tracer
                        Cardano.Logging.Test.Script
                        Cardano.Logging.Test.Unit.Aggregation
                        Cardano.Logging.Test.Unit.Configuration
                        Cardano.Logging.Test.Unit.DataPoint
                        Cardano.Logging.Test.Unit.Documentation
                        Cardano.Logging.Test.Unit.EKG
                        Cardano.Logging.Test.Unit.FrequencyLimiting
                        Cardano.Logging.Test.Unit.Routing
                        Cardano.Logging.Test.Unit.TestObjects
                        Cardano.Logging.Test.Unit.Trivial

  build-depends:        base >=4.12 && <5
                      , aeson
                      , async
                      , bytestring
                      , containers
                      , deepseq
                      , ekg-core
                      , generic-data
                      , hostname
                      , stm
                      , tasty
                      , tasty-hunit
                      , tasty-quickcheck
                      , text
                      , time
                      , trace-dispatcher
                      , unordered-containers
                      , utf8-string
                      , unix
                      , yaml
                      , QuickCheck
                      , cardano-prometheus-tracker


benchmark trace-dispatcher-bench
  import:               project-config
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       bench, test
  main-is:              trace-dispatcher-bench.hs

  other-modules:        Cardano.Logging.Test.Types
                        Cardano.Logging.Test.Oracles
                        Cardano.Logging.Test.Config
                        Cardano.Logging.Test.Tracer
                        Cardano.Logging.Test.Script

  build-depends:        base >=4.12 && <5
                      , aeson
                      , containers
                      , criterion
                      , ekg-core
                      , text
                      , time
                      , trace-dispatcher
                      , QuickCheck
